--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
   background-color: #f0f0f0;
 }
 
+.spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .wheel {
   display: flex;
   flex-wrap: wrap;
