--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #2c3e50; /* Deep blue background for contrast */
+  background-color: #2c3e50; /* Dark blue */
   color: #ecf0f1;
   line-height: 1.6;
   padding: 20px;
@@ -18,7 +18,7 @@ body {
 header {
   text-align: center;
   margin-bottom: 20px;
-  background-color: #2c3e50; /* Deep blue */
+  background-color: #2c3e50;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
